kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/valid/006_constraint_type_boolean_valid3.kmt
/* $Id: 006_constraint_type_boolean_valid3.kmt,v 1.1 2007-09-10 08:35:07 cfaucher Exp $
 * Creation date: August 6, 2007
 * License:
 * Copyright:
 * Authors:
 */
@mainClass "root_package::Main"
@mainOperation "main"


package root_package;


require kermeta
class Main
{
	operation main() : Void
	pre lapre is do true end
	is do 
		
	end
}