kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/029_DerivedProperties_invalid02.kmt
/* $Id: 029_DerivedProperties_invalid02.kmt,v 1.1 2008-04-09 14:40:53 dvojtise Exp $
 * Creation date: February 04, 2008
 * License:	EPL
 * Copyright:
 * Authors:
 *     Vincent Mahe
 */

package derived_properties;

require kermeta
using kermeta::standard

class Example {
	
	// invalid because * multiplicity means no setter
	property p4 : Integer[1..*]
		setter is do
			stdio.writeln("")
		end
	
	

}